--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -8,7 +8,7 @@
     - ../vars/k8s_secret.yaml
 
   vars:
-    vs_name: cafe."{{app-domain}}"
+    local_domain: 1laptop.local
     package_state: present
     secret_state: create
 
