--- a/automation/delete.cafe.app.yaml
+++ b/automation/delete.cafe.app.yaml
@@ -8,7 +8,7 @@
     - ../vars/k8s_secret.yaml
 
   vars:
-    local_domain: 1laptop.local
+    local_domain: "1laptop.local"
     package_state: absent
     secret_state: delete
 
