--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -53,7 +53,7 @@
     - name: Template create Dashboard Yaml file
       ansible.builtin.template: 
         src: ./roles/manage_nic_deployment/templates/nginx-dashboard.js
-        dest: ./files/nginx-dashboard.yaml
+        dest: ./roles/manage_nic_deployment/files/nginx-dashboard.yaml
         force: yes        
       delegate_to: localhost
       
