--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -55,7 +55,7 @@
         src: ./roles/manage_nic_deployment/templates/nginx-dashboard.js
         dest: ./roles/manage_nic_deployment/files/nginx-dashboard.yaml
         force: yes        
-      delegate_to: localhost
+      #delegate_to: localhost
       
     - name: NGINX IC
       import_role:
