--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -55,6 +55,7 @@
         src: ./roles/manage_nic_deployment/templates/nginx-dashboard.js
         dest: ./roles/manage_nic_deployment/files/nginx-dashboard.yaml
         force: yes        
+      connection: local  
       #delegate_to: localhost
       
     - name: NGINX IC
