--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -51,6 +51,7 @@
         name: manage_cis_deployment
 
     - name: Template create Dashboard Yaml file
+      host: localhost
       ansible.builtin.template: 
         src: ./roles/manage_nic_deployment/templates/nginx-dashboard.js
         dest: ./roles/manage_nic_deployment/files/nginx-dashboard.yaml
