--- a/automation/roles/manage_nic_deployment/files/nginx-dashboard.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-dashboard.yaml
@@ -23,7 +23,7 @@ metadata:
 spec:
   # ingressClassName: nginx # use only with k8s version >= 1.18.0
   rules:
-  - host: ~ nginx_hostname ~
+  - host: '~ nginx_hostname ~'
     http:
       paths:
       - path: /dashboard.html
