--- a/automation/delete.ingresslink-externaldns.yaml
+++ b/automation/delete.ingresslink-externaldns.yaml
@@ -8,6 +8,7 @@
     local_domain: 1laptop.local
     package_state: absent
     secret_state: delete
+    nginx_hostname: nginx.local
 
   tasks:
     - name: Delete a nginx-ingress namespace
