--- a/automation/roles/manage_app_deployment/tasks/main.yml
+++ b/automation/roles/manage_app_deployment/tasks/main.yml
@@ -15,6 +15,7 @@
 
 - name: Manage Ingresslink and ExternalDNS CRD
   kubernetes.core.k8s:
+    namespace: default
     state: "{{ package_state }}"
     definition: "{{ lookup('template', 'files/{{item}}.yaml') | from_yaml_all }}"  
   with_items: 
