--- a/automation/roles/manage_app_deployment/files/vs-ingresslink.yaml
+++ b/automation/roles/manage_app_deployment/files/vs-ingresslink.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: nginx-ingress
 spec:
   virtualServerAddress: "10.1.10.100"
-  host: cafe."{{local-domain}}"
+  host: cafe."{{local_domain}}"
   iRules:
     - /Common/Proxy_Protocol_iRule
   selector:
