--- a/automation/roles/manage_app_deployment/files/edns-cafe.yaml
+++ b/automation/roles/manage_app_deployment/files/edns-cafe.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     f5cr: "true"
 spec:
-  domainName: cafe."{local_domain}}"
+  domainName: "cafe.{{local_domain}}"
   dnsRecordType: A
   loadBalanceMethod: round-robin
   pools:
