--- a/automation/roles/manage_cis_deployment/files/f5-bigip-ctlr-deployment.yaml
+++ b/automation/roles/manage_cis_deployment/files/f5-bigip-ctlr-deployment.yaml
@@ -41,12 +41,12 @@ spec:
             # https://clouddocs.f5.com/containers/latest/
               "--bigip-username=$(BIGIP_USERNAME)",
               "--bigip-password=$(BIGIP_PASSWORD)",
-              "--bigip-url=10.1.1.245",
+              "--bigip-url={{bigip_address}}",
               "--bigip-partition=ingresslink",
               "--namespace=nginx-ingress",
               "--gtm-bigip-username=$(BIGIP_USERNAME)",
               "--gtm-bigip-password=$(BIGIP_PASSWORD)",
-              "--gtm-bigip-url=10.1.1.245",
+              "--gtm-bigip-url={{bigip_dns_address}}",
               "--pool-member-type=cluster",
               "--flannel-name=fl-vxlan",
               "--log-level=DEBUG",
