--- a/automation/roles/manage_cis_deployment/files/f5-bigip-node.yaml
+++ b/automation/roles/manage_cis_deployment/files/f5-bigip-node.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Node
 metadata:
-  name: bigip1
+  name: "{{bigip_name}}"
   annotations:
     #Replace MAC with your BIGIP Flannel VXLAN Tunnel MAC
-    flannel.alpha.coreos.com/backend-data: '{"VtepMAC":"08:00:27:da:a1:3c"}'
+    flannel.alpha.coreos.com/backend-data: '{"VtepMAC":"{{bigip_mac}}"}'
     flannel.alpha.coreos.com/backend-type: "vxlan"
     flannel.alpha.coreos.com/kube-subnet-manager: "true"
     #Replace IP with Self-IP for your deployment
-    flannel.alpha.coreos.com/public-ip: "10.1.20.4"
+    flannel.alpha.coreos.com/public-ip: "{{bigip_selfip}}"
 spec:
   #Replace Subnet with your BIGIP Flannel Subnet
-  podCIDR: "10.244.20.0/16"
+  podCIDR: "{{pods_cidr_net}}"
