--- a/automation/roles/manage_cis_deployment/tasks/main.yml
+++ b/automation/roles/manage_cis_deployment/tasks/main.yml
@@ -17,7 +17,7 @@
 - name: Modify BIGIP CTRL Manifest
   kubernetes.core.k8s:
     state: "{{ package_state }}"
-    definition: "{{ lookup('file', 'files/f5-bigip-ctlr-deployment.yaml') | from_yaml_all }}"
+    definition: "{{ lookup('template', 'files/f5-bigip-ctlr-deployment.yaml') | from_yaml_all }}"
     validate:
       fail_on_error: yes
 
