--- a/automation/roles/manage_nic_deployment/files/nginx-dashboard.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-dashboard.yaml
@@ -41,7 +41,7 @@ metadata:
   name: vs-dashboard.ingresslink
   namespace: nginx-ingress
 spec:
-  virtualServerAddress: "10.1.10.110"
+  virtualServerAddress: "{{nginx_dashboard_address}}"
   host: "nginx.{{local_domain}}"
   iRules:
     - /Common/Proxy_Protocol_iRule
