--- a/automation/roles/manage_app_deployment/files/vs-ingresslink.yaml
+++ b/automation/roles/manage_app_deployment/files/vs-ingresslink.yaml
@@ -4,7 +4,7 @@ metadata:
   name: vs-ingresslink
   namespace: nginx-ingress
 spec:
-  virtualServerAddress: "10.1.10.100"
+  virtualServerAddress: "{{app_address}}"
   host: "cafe.{{local_domain}}"
   iRules:
     - /Common/Proxy_Protocol_iRule
