--- a/automation/roles/manage_cis_deployment/vars/main.yml
+++ b/automation/roles/manage_cis_deployment/vars/main.yml
@@ -7,4 +7,5 @@ bigip_selfip: 10.1.20.4
 bigip_address: 10.1.1.245
 bigip_dns_address: 10.1.1.245
 bigip_tunnel_name: k8s-tunnel
+pods_cidr_net: 10.244.0.0/16
 
