--- a/automation/roles/manage_cis_deployment/files/f5-bigip-node.yaml
+++ b/automation/roles/manage_cis_deployment/files/f5-bigip-node.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Node
 metadata:
-  name: "{{bigip_name}}"
+  name: bigip1
   annotations:
     #Replace MAC with your BIGIP Flannel VXLAN Tunnel MAC
     flannel.alpha.coreos.com/backend-data: '{"VtepMAC":"{{bigip_mac}}"}'
