--- a/automation/roles/manage_cis_deployment/files/f5-bigip-node.yaml
+++ b/automation/roles/manage_cis_deployment/files/f5-bigip-node.yaml
@@ -8,7 +8,7 @@ metadata:
     flannel.alpha.coreos.com/backend-type: "vxlan"
     flannel.alpha.coreos.com/kube-subnet-manager: "true"
     #Replace IP with Self-IP for your deployment
-    flannel.alpha.coreos.com/public-ip: "10.1.20.4"
+    flannel.alpha.coreos.com/public-ip: "{{bigip_public_ip}}"
 spec:
   #Replace Subnet with your BIGIP Flannel Subnet
   podCIDR: "{{bigip_tunnel_cidr}}"
