--- a/automation/roles/manage_cis_deployment/files/f5-bigip-ctlr-deployment.yaml
+++ b/automation/roles/manage_cis_deployment/files/f5-bigip-ctlr-deployment.yaml
@@ -48,7 +48,7 @@ spec:
               "--gtm-bigip-password=$(BIGIP_PASSWORD)",
               "--gtm-bigip-url={{bigip_dns_address}}",
               "--pool-member-type=cluster",
-              "--flannel-name=k8s-tunnel",
+              "--flannel-name={{bigip_tunnel_name}}",
               "--log-level=DEBUG",
               "--insecure=true",
               "--custom-resource-mode=true",
