--- a/automation/roles/manage_cis_deployment/files/f5-bigip-ctlr-deployment.yaml
+++ b/automation/roles/manage_cis_deployment/files/f5-bigip-ctlr-deployment.yaml
@@ -46,7 +46,7 @@ spec:
               "--namespace=nginx-ingress",
               "--gtm-bigip-username=$(BIGIP_USERNAME)",
               "--gtm-bigip-password=$(BIGIP_PASSWORD)",
-              "--gtm-bigip-url={{bigip_dns_address}}",
+              "--gtm-bigip-url={{bigip_dns_mgt}}",
               "--pool-member-type=cluster",
               "--flannel-name={{bigip_tunnel_name}}",
               "--log-level=DEBUG",
