--- a/automation/roles/manage_service_mesh_deployment/tasks/main.yml
+++ b/automation/roles/manage_service_mesh_deployment/tasks/main.yml
@@ -1,2 +1,10 @@
 ---
 # tasks file for manage_service_mesh_deployment
+- name: Move Mesh Files
+  ansible.builtin.copy:
+    src: files/nginx-meshctl_linux
+    dest: /usr/local/bin/nginx-meshctl
+    mode: '0764'
+
+  
+
