--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -69,3 +69,11 @@ spec:
          #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
       imagePullSecrets:
         - name: regcred
+      volumes:
+      - hostPath:
+          path: /run/spire/sockets
+          type: DirectoryOrCreate
+        name: spire-agent-socket       
+      volumeMounts:
+      - mountPath: /run/spire/sockets
+        name: spire-agent-socket 
