--- a/automation/roles/manage_service_mesh_deployment/tasks/main.yml
+++ b/automation/roles/manage_service_mesh_deployment/tasks/main.yml
@@ -6,6 +6,7 @@
     state: "{{ package_state }}"
     definition: "{{ lookup('file', 'files/{{item}}.yml') | from_yaml_all }}"  
   with_items: 
+    - kube-apiserver.yml
     - prometheus
     - grafana
     - otel-collector
