--- a/automation/deploy.nsm.yaml
+++ b/automation/deploy.nsm.yaml
@@ -31,12 +31,12 @@
         force: yes
       become: yes
 
-    - name: NSM Deploy
+    - name: NSM Packages
       import_role:
         name: manage_service_mesh_deployment
     
-#    - name: Install NGINX Service Mesh
-#      ansible.builtin.command: nginx-meshctl deploy --prometheus-address "prometheus.nsm-monitoring.svc:9090" --telemetry-exporters "type=otlp,host=otel-collector.nsm-monitoring.svc,port=4317" --telemetry-sampler-ratio 1 --disabled-namespaces "nsm-monitoring"
-#      become: yes
+    - name: Install NGINX Service Mesh
+      ansible.builtin.shell: nginx-meshctl deploy --prometheus-address "prometheus.nsm-monitoring.svc:9090" --telemetry-exporters "type=otlp,host=otel-collector.nsm-monitoring.svc,port=4317" --telemetry-sampler-ratio 1 --disabled-namespaces "nsm-monitoring"
+      become: yes
       
 
