--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -54,6 +54,9 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        volumeMounts:
+        - mountPath: /run/spire/sockets
+          name: spire-agent-socket:wq
         args:
           - -nginx-plus
           - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
@@ -73,10 +76,7 @@ spec:
       imagePullSecrets:
         - name: regcred
       volumes:
-      - hostPath:
-          path: /run/spire/sockets
-          type: DirectoryOrCreate
-        name: spire-agent-socket       
-      volumeMounts:
-      - mountPath: /run/spire/sockets
-        name: spire-agent-socket 
+      - csi:
+        driver: wlapi-mounter.spire.nginx.com
+        readOnly: true
+      name: spire-agent-socket
