--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -56,7 +56,7 @@ spec:
               fieldPath: metadata.name
         volumeMounts:
         - mountPath: /run/spire/sockets
-          name: spire-agent-socket:wq
+          name: spire-agent-socket
         args:
           - -nginx-plus
           - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
