--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -19,11 +19,6 @@ spec:
         prometheus.io/port: "9113"
     spec:
       serviceAccountName: nginx-ingress
-      volumes:
-      - csi:
-        driver: wlapi-mounter.spire.nginx.com
-        readOnly: true
-        name: spire-agent-socket      
       containers:
       - image: private-registry.nginx.com/nginx-ic-nap/nginx-plus-ingress:2.3.0
         imagePullPolicy: IfNotPresent
@@ -80,3 +75,8 @@ spec:
           - -spire-agent-address=/run/spire/sockets/agent.sock
       imagePullSecrets:
         - name: regcred
+      volumes:
+      - hostPath:
+          path: /run/spire/sockets
+          type: DirectoryOrCreate
+        name: spire-agent-socket
