--- a/automation/roles/manage_nic_deployment/files/nginx-ingress2.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress2.yaml
@@ -45,6 +45,9 @@ spec:
             - ALL
             add:
             - NET_BIND_SERVICE
+        volumeMounts:
+        - mountPath: /run/spire/sockets
+          name: spire-agent-socket             
         env:
         - name: POD_NAMESPACE
           valueFrom:
@@ -72,3 +75,8 @@ spec:
           - -spire-agent-address=/run/spire/sockets/agent.sock
       imagePullSecrets:
         - name: regcred
+      volumes:
+      - hostPath:
+          path: /run/spire/sockets
+          type: DirectoryOrCreate
+        name: spire-agent-socket
