--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -68,7 +68,6 @@ spec:
          #- -external-service=nginx-ingress
           - -enable-prometheus-metrics
           - -enable-latency-metrics
-         #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
-          - -spire-agent-address=/run/spire/sockets/agent.sock
+         #- -global-configuration=$(POD_NAMESPACE)/nginx-configuratio
       imagePullSecrets:
         - name: regcred
