--- a/automation/deploy.nsm.yaml
+++ b/automation/deploy.nsm.yaml
@@ -36,7 +36,7 @@
         name: manage_service_mesh_deployment
     
     - name: Install NGINX Service Mesh
-      ansible.builtin.shell: nginx-meshctl deploy --mtls-mode off --prometheus-address "prometheus.nsm-monitoring.svc:9090" --telemetry-exporters "type=otlp,host=otel-collector.nsm-monitoring.svc,port=4317" --telemetry-sampler-ratio 1 --disabled-namespaces "nsm-monitoring"
+      ansible.builtin.shell: nginx-meshctl deploy --mtls-mode strict --prometheus-address "prometheus.nsm-monitoring.svc:9090" --telemetry-exporters "type=otlp,host=otel-collector.nsm-monitoring.svc,port=4317" --telemetry-sampler-ratio 1 --disabled-namespaces "nsm-monitoring"
 
       
 
