--- a/automation/roles/manage_nic_deployment/tasks/main.yml
+++ b/automation/roles/manage_nic_deployment/tasks/main.yml
@@ -25,7 +25,7 @@
     - appprotect-dos-arb-svc
     - nginx-config
     - ingress-class
-    - nginx-ingress2
+    - nginx-ingress
     - nginx-service
 
 - name: Manage Dashboard Deployment
