--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -31,6 +31,8 @@ spec:
           containerPort: 8081
         - name: prometheus
           containerPort: 9113
+        - name: dashboard
+          containerPort: 9000          
         readinessProbe:
           httpGet:
             path: /nginx-ready
