--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       serviceAccountName: nginx-ingress
       containers:
-      - image: private-registry.nginx.com/nginx-ic-nap/nginx-plus-ingress:3.0.2
+      - image: nginx-ic-nap/nginx-plus-ingress:3.0.2
         imagePullPolicy: IfNotPresent
         name: nginx-plus-ingress
         ports:
