--- a/automation/roles/manage_cis_deployment/files/f5-bigip-ctlr-deployment.yaml
+++ b/automation/roles/manage_cis_deployment/files/f5-bigip-ctlr-deployment.yaml
@@ -18,7 +18,7 @@ spec:
       # permissions
       containers:
         - name: k8s-bigip-ctlr
-          image: "quay.io/f5networks/k8s-bigip-ctlr-devel:d9e0c06ef47f57feb3ed6c837c1dae6ba8f8619e"
+          image: "f5networks/k8s-bigip-ctlr:2.7.1"
           env:
             - name: BIGIP_USERNAME
               valueFrom:
