--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -18,6 +18,26 @@
         state: present
       become: true
 
+    - name: Create local .kube directory
+      become_user: {{ansible_user}}
+      file:
+        path: ~/.kube
+        state: directory
+        owner: {{ansible_user}}
+        group: {{ansible_user}}
+        mode: '0700'
+    
+    - name: Copy .kube directory
+      command: cp root/.kube ~/.kube
+      become_user: {{ansible_user}}
+    
+    - name: Set ownership and permissions
+      file:
+        path: ~/.kube
+        owner: {{ansible_user}}
+        group: {{ansible_user}}
+        mode: '0600'
+        
     - name: Ensure Kubernetes is installed
       pip:
         name: 
