--- a/automation/delete.ingresslink-externaldns.yaml
+++ b/automation/delete.ingresslink-externaldns.yaml
@@ -18,6 +18,7 @@
     - name: BIG-IP credentials as Kubernetes Secrets
       ansible.builtin.command: 
         cmd: kubectl delete secret bigip-login -n kube-system 
+      becomes: true
       ignore_errors: true
 
     - name: CIS  
