--- a/automation/roles/manage_app_deployment/files/edns-cafe.yaml
+++ b/automation/roles/manage_app_deployment/files/edns-cafe.yaml
@@ -12,7 +12,7 @@ spec:
   pools:
   - dnsRecordType: A
     loadBalanceMethod: round-robin
-    dataServerName: "/Common/bigip1.1broken.net"
+    dataServerName: "/Common/bigips"
     monitors:
     - interval: 10
       recv: ""
