--- a/automation/roles/manage_service_mesh_deployment/tasks/main.yml
+++ b/automation/roles/manage_service_mesh_deployment/tasks/main.yml
@@ -10,8 +10,12 @@
     - grafana
     - otel-collector
     - jaeger
-
-
-
-  
-
+- name: Manage Ingresslink and ExternalDNS CRD
+  kubernetes.core.k8s:
+    namespace: default
+    state: "{{ package_state }}"
+    definition: "{{ lookup('template', 'files/{{item}}.yaml') | from_yaml_all }}"  
+  with_items: 
+    - cafe-ingress
+    - vs-ingresslink
+    - edns-cafe
