--- a/automation/roles/manage_app_deployment/tasks/main.yml
+++ b/automation/roles/manage_app_deployment/tasks/main.yml
@@ -9,8 +9,10 @@
   with_items: 
     - cafe
     - cafe-secret
+    - ap-dataguard-alarm-policy
+    - ap-logconf
+    - ap-apple-uds    
 
-    
 - name: Manage Ingresslink and ExternalDNS CRD
   kubernetes.core.k8s:
     namespace: default
