--- a/automation/roles/manage_cis_deployment/files/f5-bigip-ctlr-deployment.yaml
+++ b/automation/roles/manage_cis_deployment/files/f5-bigip-ctlr-deployment.yaml
@@ -49,7 +49,7 @@ spec:
               "--gtm-bigip-url={{bigip_dns_mgt}}",
               "--pool-member-type=cluster",
               "--flannel-name={{bigip_tunnel_name}}",
-              "--log-level=DEBUG",
+              "--log-level=WARNING",
               "--insecure=true",
               "--custom-resource-mode=true",
               "--as3-validation=true",
