--- a/automation/roles/manage_nic_deployment/tasks/main.yml
+++ b/automation/roles/manage_nic_deployment/tasks/main.yml
@@ -26,6 +26,7 @@
     - ingress-class
     - "{{with_nsm}}"
     - nginx-service
+    - nginx-dashboard
 
 - name: NGINX Secrets
   kubernetes.core.k8s:
