--- a/automation/roles/manage_nic_deployment/tasks/main.yml
+++ b/automation/roles/manage_nic_deployment/tasks/main.yml
@@ -24,6 +24,7 @@
     - appprotect-dos-arb-svc
     - nginx-config
     - ingress-class
+    - nginx-ingress
     - nginx-service
 
 - name: NGINX Secrets
