--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -12,58 +12,10 @@
       secret_state: create
 
   tasks:
-    - name: Ensure Pip is installed
-      ansible.builtin.package:
-        name: python3-pip
-        state: present
-      become: true
-
-    - name: Create local .kube directory
-      become_user: "{{ansible_user}}"
-      file:
-        path: ~/.kube
-        state: directory
-        owner: "{{ansible_user}}"
-        group: "{{ansible_user}}"
-        mode: '0700'
-    
-    - name: Ensure Kubernetes is installed
-      pip:
-        name: 
-          - Kubernetes>=12.0.0
-          - PyYAML
-          - kubernetes-validate
-        state: present
-      become: true 
-
-    - name: Create a nginx-ingress namespace
-      kubernetes.core.k8s:
-        name: nginx-ingress
-        kind: Namespace
-        state: "{{package_state}}"
-
-    - name: NGINX JWT in a Docker Config Secret
-      ansible.builtin.command: 
-        cmd: kubectl create secret docker-registry regcred --docker-server=private-registry.nginx.com --docker-username="{{nginx_jwt}}" --docker-password=none -n nginx-ingress
-      ignore_errors: true
-      become: true
-      #no_log: true
-
-    - name: BIG-IP credentials as Kubernetes Secrets
-      ansible.builtin.command: 
-        cmd: kubectl create secret generic bigip-login -n kube-system --from-literal=username=admin --from-literal=password="{{ bigip_passwd }}"
-      ignore_errors: true
-      become: true
-      #no_log: true
+    - name: Install Python Kubernetes 
+      import_role:
+        name: python_k8s
 
     - name: CIS  
       import_role:
         name: manage_cis_deployment
-
-    - name: NGINX IC
-      import_role:
-        name: manage_nic_deployment
-
-    - name: Syslog
-      import_role: 
-        name: manage_syslog_deployment
