--- a/automation/roles/manage_cis_deployment/tasks/main.yml
+++ b/automation/roles/manage_cis_deployment/tasks/main.yml
@@ -11,7 +11,7 @@
         namespace: kube-system
       stringData:
         username: admin
-        password: { { bigip_passwd } }
+        password: '{{ bigip_passwd }}'
       type: Opaque"
   become: true
 
