--- a/automation/roles/manage_cis_deployment/tasks/main.yml
+++ b/automation/roles/manage_cis_deployment/tasks/main.yml
@@ -9,7 +9,7 @@
       metadata:
         name: bigip-login
         namespace: kube-system
-      stringData:
+      data:
         username: admin
         password: '{{ bigip_passwd }}'
       type: Opaque"
